# LunchRoulette

./: .dockerignore  .env.example  .flake8  .gitignore  DEPLOYMENT.md  Dockerfile  PYTEST_FIXES.md  README.md  RESTRUCTURE_SUMMARY.md  app.py  cache.db  cache_service.py  database.py  distance_calculator.py  docker-compose.yml  error_handler.py  fix_test_patches.sh  location_service.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  restaurant_selector.py  restaurant_service.py  run.py  run_tests.sh  test_cache_service.py  test_cache_system.py  test_distance_calculator.py  test_endpoints.py  test_error_handling.py  test_integration_comprehensive.py  test_integration_database.py  test_integration_endpoints.py  test_integration_final.py  test_integration_summary.md  test_location_service.py  test_production.db  test_production_environment.py  test_restaurant_service.py  (+4 more)
docs/: 01_要求定義書_学生用.md  02_設計.md  03_デプロイ手順.md  DEPLOYMENT.md  DESIGN.md  要求定義書_講師用.md
internship/: 01_budget_filter.md  02_weather_message.md  03_distance_display.md  04_favorite_restaurants.md  05_opening_hours_validation.md  06_search_history.md  07_random_animation.md  08_private_room_filter.md  09_card_payment_filter.md  10_free_drink_filter.md
src/lunch_roulette/: __init__.py  __main__.py  app.py  config.py  wsgi.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: conftest.py  pytest.ini
tests/unit/: test_area_selection.py  test_cache_service.py  test_cache_system.py  test_distance_calculator.py  test_endpoints.py  test_error_handling.py  (+9 more)
(+15 files in other folders)
